refactoring: вставка данных с БД в таблицу и сохранение на машине файла